events mobile contrast fixed

--- a/_events.scss
+++ b/_events.scss
@@ -403,10 +403,10 @@
   // height: 40vh;
 }
 .e-m-card-1 {
-  background-color: #f56046;
+  background-color: #DE3000;
 }
 .e-m-card-2 {
-  background-color: #f53a78;
+  background-color: #CC0072;
 }
 .e-m-card-3 {
   background-color: #3c68f8;
