--- a/style.css
+++ b/style.css
@@ -1450,11 +1450,11 @@ body {
 }
 
 .e-m-card-1 {
-  background-color: #f56046;
+  background-color: #DE3000;
 }
 
 .e-m-card-2 {
-  background-color: #f53a78;
+  background-color: #CC0072;
 }
 
 .e-m-card-3 {
